# RedditMiner

./: .gitignore  README.md  alembic.ini  makefile  pyproject.toml
docs/js/: generateRedditMiner.js
src/reddit_miner/: cli.py
src/reddit_miner/adapters/db/: db_exporter.py  models.py
src/reddit_miner/adapters/db/docker/: dockerfile
src/reddit_miner/adapters/db/migrations/versions/: 0001_create_comments_table.py  0002_add_moderation_feedback_table.py
src/reddit_miner/domain/: models.py
src/reddit_miner/services/: analyzer.py  cli_services.py  exporter.py  fetcher.py
src/reddit_miner/services/exporters/: db_exporter.py
src/reddit_miner/services/reddit_sentinel/: reddit_sentinel.py
src/reddit_miner/services/user_simulator/: user_simulator.py
tests/: test_fetcher.py
